refactor: .collect(Collectors.toList()) ---> .toList()
더 아름답고, 멋진 코드 나는 완성